# sage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSES.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/sage_bench_hard/: README.md  generate.py  run.py
data/smoke/: stats.json  test.jsonl  train.jsonl  val.jsonl
docs/: architecture.md  data_pipeline.md  design.md  training.md
notebooks/: colab_synthesize.ipynb  colab_train.ipynb  colab_train_full.ipynb
rust/sage-rs/: Cargo.toml  README.md
rust/sage-rs/examples/: check.rs
rust/sage-rs/src/: conversation.rs  error.rs  lib.rs  model.rs  schema.rs  tokenizer.rs
sage/: __init__.py  conversation.py  inference.py  loss.py  model.py  schema.py  tokenizer.py
scripts/: auto_review.py  colab_synthesize.ipynb  colab_train.ipynb  review_server.py  test_single_message.py
tests/: test_chunking.py  test_conversation.py  test_inference_coercion.py  test_loss_and_groups.py  test_observation_mask.py  test_synthetic.py  test_tokenizer.py  test_trajectory.py
training/: calibrate_thresholds.py  dataset.py  export_onnx.py  train.py
training/data/: __init__.py  aggregate.py  example.py  loaders.py  trajectorize_cli.py  trajectory.py
training/data/synthetic/: __init__.py  builder.py  cli.py  generator.py  prompts.py
